--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -9,56 +9,8 @@
   <link rel="stylesheet" href="css/dashboard.css" />
 </head>
 <body>
-  <!-- Toggle Button for Small Screens -->
-  <button class="btn btn-primary m-2 d-md-none" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasSidebar" aria-controls="offcanvasSidebar">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
   <div class="d-flex" id="wrapper">
-    <!-- Sidebar for md and up -->
-    <div class="bg-primary text-white p-3 vh-100 d-none d-md-block" id="sidebar">
-      <h4 class="mb-4">WRUS Asset Tracking System</h4>
-      <ul class="nav flex-column">
-        <li class="nav-item mb-2">
-          <a href="#" class="nav-link text-white">Dashboard</a>
-        </li>
-        <li class="nav-item mb-2">
-          <a href="consumable.html" class="nav-link text-white">Consumable</a>
-        </li>
-        <li class="nav-item mb-2">
-          <a href="ics.html" class="nav-link text-white">ICS</a>
-        </li>
-        <li class="nav-item mb-2">
-          <a href="ownership-summary.html" class="nav-link text-white">Inventory Summary</a>
-        </li>
-      </ul>
-      <button id="logoutBtn" class="btn btn-light mt-auto">Logout</button>
-    </div>
-
-    <!-- Offcanvas Sidebar for smaller screens -->
-    <div class="offcanvas offcanvas-start text-bg-primary" tabindex="-1" id="offcanvasSidebar" aria-labelledby="offcanvasSidebarLabel">
-      <div class="offcanvas-header">
-        <h5 class="offcanvas-title" id="offcanvasSidebarLabel">WRUS Asset Tracking System</h5>
-        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-      </div>
-      <div class="offcanvas-body">
-        <ul class="nav flex-column">
-          <li class="nav-item mb-2">
-            <a href="#" class="nav-link text-white">Dashboard</a>
-          </li>
-          <li class="nav-item mb-2">
-            <a href="consumable.html" class="nav-link text-white">Consumable</a>
-          </li>
-          <li class="nav-item mb-2">
-            <a href="ics.html" class="nav-link text-white">ICS</a>
-          </li>
-          <li class="nav-item mb-2">
-            <a href="ownership-summary.html" class="nav-link text-white">Inventory Summary</a>
-          </li>
-        </ul>
-        <button id="logoutBtnMobile" class="btn btn-light mt-auto">Logout</button>
-      </div>
-    </div>
+    <div id="sidebarContainer"></div>
 
     <!-- Page Content -->
     <div class="container-fluid p-4" id="page-content">
@@ -95,9 +47,14 @@
             </div>
           </div>
       </div>
+    </div>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script type="module">
+    import { renderSidebar } from './js/components/sidebar.js';
+    renderSidebar();
+  </script>
   <script type="module" src="js/dashboard.js"></script>
 </body>
 </html>
