--- a/public/ics.html
+++ b/public/ics.html
@@ -7,43 +7,10 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
   <link rel="stylesheet" href="css/dashboard.css" />
-  <link rel="stylesheet" href="css/ics.css" />
 </head>
 <body>
-  <!-- Toggle Button for Small Screens -->
-  <button class="btn btn-primary m-2 d-md-none" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasSidebar" aria-controls="offcanvasSidebar">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
   <div class="d-flex" id="wrapper">
-    <!-- Sidebar for md and up -->
-    <div class="bg-primary text-white p-3 vh-100 d-none d-md-block" id="sidebar">
-      <h4 class="mb-4">WRUS Asset Tracking System</h4>
-      <ul class="nav flex-column">
-        <li class="nav-item mb-2"><a href="dashboard.html" class="nav-link text-white">Dashboard</a></li>
-        <li class="nav-item mb-2"><a href="consumable.html" class="nav-link text-white">Consumable</a></li>
-        <li class="nav-item mb-2"><a href="#" class="nav-link text-white">ICS</a></li>
-        <li class="nav-item mb-2"><a href="ownership-summary.html" class="nav-link text-white">Inventory Summary</a></li>
-      </ul>
-      <button id="logoutBtn" class="btn btn-light mt-auto">Logout</button>
-    </div>
-
-    <!-- Offcanvas Sidebar -->
-    <div class="offcanvas offcanvas-start text-bg-primary" tabindex="-1" id="offcanvasSidebar" aria-labelledby="offcanvasSidebarLabel">
-      <div class="offcanvas-header">
-        <h5 class="offcanvas-title" id="offcanvasSidebarLabel">WRUS Asset Tracking System</h5>
-        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-      </div>
-      <div class="offcanvas-body">
-        <ul class="nav flex-column">
-          <li class="nav-item mb-2"><a href="dashboard.html" class="nav-link text-white">Dashboard</a></li>
-          <li class="nav-item mb-2"><a href="consumable.html" class="nav-link text-white">Consumable</a></li>
-          <li class="nav-item mb-2"><a href="#" class="nav-link text-white">ICS</a></li>
-          <li class="nav-item mb-2"><a href="ownership-summary.html" class="nav-link text-white">Inventory Summary</a></li>
-        </ul>
-        <button id="logoutBtnMobile" class="btn btn-light mt-auto">Logout</button>
-      </div>
-    </div>
+    <div id="sidebarContainer"></div>
 
     <!-- Page Content -->
     <div class="container-fluid p-4" id="page-content">
@@ -266,14 +233,18 @@
       </div>
     </div>
 
-    <div id="loadingOverlay" style="display: none; position: fixed; z-index: 1055; top: 0; left: 0; width: 100%; height: 100%; background: rgba(255,255,255,0.8); justify-content: center; align-items: center;">
-      <div class="spinner-border text-primary" role="status" style="width: 3rem; height: 3rem;">
+    <div id="loadingOverlay">
+      <div class="spinner-border text-primary" role="status" id="loadingSpinner">
         <span class="visually-hidden">Loading...</span>
       </div>
     </div>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script type="module">
+    import { renderSidebar } from './js/components/sidebar.js';
+    renderSidebar();
+  </script>
   <script type="module" src="js/ics-data.js"></script>
   <script type="module" src="js/ics-ui.js"></script>
   <script type="module" src="js/upload/upload.js"></script>
