--- a/public/ownership-summary.html
+++ b/public/ownership-summary.html
@@ -13,68 +13,8 @@
   <link rel="stylesheet" href="css/ownership-summary.css" />
 </head>
 <body>
-  <!-- Toggle Button for Small Screens -->
-  <button
-    class="btn btn-primary m-2 d-md-none"
-    type="button"
-    data-bs-toggle="offcanvas"
-    data-bs-target="#offcanvasSidebar"
-    aria-controls="offcanvasSidebar"
-  >
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
   <div class="d-flex" id="wrapper">
-    <!-- Sidebar for md and up -->
-    <div class="bg-primary text-white p-3 vh-100 d-none d-md-block" id="sidebar">
-      <h4 class="mb-4">WRUS Asset Tracking System</h4>
-      <ul class="nav flex-column">
-        <li class="nav-item mb-2">
-          <a href="dashboard.html" class="nav-link text-white">Dashboard</a>
-        </li>
-        <li class="nav-item mb-2">
-          <a href="consumable.html" class="nav-link text-white">Consumable</a>
-        </li>
-        <li class="nav-item mb-2">
-          <a href="ics.html" class="nav-link text-white">ICS</a>
-        </li>
-        <li class="nav-item mb-2">
-          <a href="ownership-summary.html" class="nav-link text-white">Inventory Summary</a>
-        </li>
-      </ul>
-      <button id="logoutBtn" class="btn btn-light mt-auto">Logout</button>
-    </div>
-
-    <!-- Offcanvas Sidebar for smaller screens -->
-    <div
-      class="offcanvas offcanvas-start text-bg-primary"
-      tabindex="-1"
-      id="offcanvasSidebar"
-      aria-labelledby="offcanvasSidebarLabel"
-    >
-      <div class="offcanvas-header">
-        <h5 class="offcanvas-title" id="offcanvasSidebarLabel">WRUS Asset Tracking System</h5>
-        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-      </div>
-      <div class="offcanvas-body">
-        <ul class="nav flex-column">
-          <li class="nav-item mb-2">
-            <a href="dashboard.html" class="nav-link text-white">Dashboard</a>
-          </li>
-          <li class="nav-item mb-2">
-            <a href="consumable.html" class="nav-link text-white">Consumable</a>
-          </li>
-          <li class="nav-item mb-2">
-            <a href="ics.html" class="nav-link text-white">ICS</a>
-          </li>
-          <li class="nav-item mb-2">
-            <a href="ownership-summary.html" class="nav-link text-white">Inventory Summary</a>
-          </li>
-        </ul>
-        <button id="logoutBtnMobile" class="btn btn-light mt-auto">Logout</button>
-      </div>
-    </div>
-
+    <div id="sidebarContainer"></div>
     <!-- Page Content -->
     <div class="container-fluid p-4" id="page-content">
       <h3 class="mb-4">Inventory Summary</h3>
@@ -98,45 +38,50 @@
         </table>
       </div>
       <!-- Pagination nav (injected by JS) will go here -->
-    </div>
-  </div>
 
-  <!-- BEGIN: Consumable Modal (single, top‐level, not nested inside #page-content) -->
-  <div
-    class="modal fade"
-    id="consumableModal"
-    tabindex="-1"
-    aria-labelledby="consumableModalLabel"
-    aria-hidden="true"
-  >
-    <div class="modal-dialog modal-lg modal-dialog-centered">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="consumableModalLabel">Consumable Details</h5>
-          <button
-            type="button"
-            class="btn-close"
-            data-bs-dismiss="modal"
-            aria-label="Close"
-          ></button>
+
+      <div
+        class="modal fade"
+        id="consumableModal"
+        tabindex="-1"
+        aria-labelledby="consumableModalLabel"
+        aria-hidden="true"
+      >
+        <div class="modal-dialog modal-lg modal-dialog-centered">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="consumableModalLabel">Consumable Details</h5>
+              <button
+                type="button"
+                class="btn-close"
+                data-bs-dismiss="modal"
+                aria-label="Close"
+              ></button>
+            </div>
+            <div class="modal-body">
+              <p class="text-center">Loading…</p>
+            </div>
+            <div class="modal-footer">
+              <button
+                type="button"
+                class="btn btn-secondary"
+                data-bs-dismiss="modal"
+              >
+                Close
+              </button>
+            </div>
+          </div>
         </div>
-        <div class="modal-body">
-          <p class="text-center">Loading…</p>
-        </div>
-        <div class="modal-footer">
-          <button
-            type="button"
-            class="btn btn-secondary"
-            data-bs-dismiss="modal"
-          >
-            Close
-          </button>
-        </div>
+      </div>
+
+    </div>
+
+    <div id="loadingOverlay">
+      <div class="spinner-border text-primary" role="status" id="loadingSpinner">
+        <span class="visually-hidden">Loading...</span>
       </div>
     </div>
   </div>
-  <!-- END: Consumable Modal -->
-
   <!-- Bootstrap JS Bundle (must come before your own JS) -->
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
@@ -144,10 +89,11 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.28/jspdf.plugin.autotable.min.js"></script>
 
-
-  <!-- Your Firestore/data logic -->
+  <script type="module">
+    import { renderSidebar } from './js/components/sidebar.js';
+    renderSidebar();
+  </script>
   <script type="module" src="js/ownership-summary-data.js"></script>
-  <!-- Your UI logic (table + modal) -->
   <script type="module" src="js/ownership-summary-ui.js"></script>
 </body>
 </html>
