--- a/public/consumable.html
+++ b/public/consumable.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Consumable Items</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
   <link rel="stylesheet" href="css/dashboard.css">
   <link rel="icon" type="image/png" href="images/favicon-32x32.png">
 </head>
@@ -14,71 +15,81 @@
 
     <!-- Page Content -->
     <div class="container-fluid p-4" id="page-content">
-        <div class="d-flex justify-content-between align-items-center mb-4">
-          <h2>Consumable Items</h2>
-          <div class="input-group w-50">
-            <span class="input-group-text">Search Item</span>
+
+      <div class="d-flex justify-content-between align-items-center mb-4">
+        <h4 class="mb-0">
+          <i class="bi bi-box-seam me-2"></i> Items
+        </h4>
+        <div class="d-flex flex-grow-1 justify-content-end gap-2 ms-3">
+          <div class="input-group" style="min-width: 350px; max-width: 500px; width: 100%;">
+            <span class="input-group-text">Search</span>
             <input type="text" id="searchInput" class="form-control" placeholder="Enter item name..." />
           </div>
+          <button id="showAddFormBtn" class="btn btn-primary">
+            <i class="bi bi-plus-circle me-1"></i> Add
+          </button>
         </div>
-        <div class="text-center mt-4">
-          <button id="showAddFormBtn" class="btn btn-success btn-lg mb-3">Add Item</button>
-        </div>
+      </div>
 
-        <div class="table-responsive">
-          <table id="consumableTable" class="table table-bordered table-hover text-center align-middle">
-            <thead class="table-success">
-              <tr>
-                <th>CID</th>
-                <th>Specification</th>
-                <th>Qty</th>
-                <th>UoM</th>
-                <th>Edit</th>
-                <th>Action</th>
-              </tr>
-            </thead>
-            <tbody id="consumableBody">
-              <!-- Filled dynamically -->
-            </tbody>
-          </table>
-          <div class="d-flex justify-content-center my-3" id="paginationContainer"></div>
-        </div>
+      <div class="table-responsive">
+        <table id="consumableTable" class="table table-bordered table-hover text-center align-middle">
+          <thead class="table-success">
+            <tr>
+              <th>CID</th>
+              <th>Specification</th>
+              <th>Qty</th>
+              <th>UoM</th>
+              <th>Edit</th>
+              <th>Action</th>
+            </tr>
+          </thead>
+          <tbody id="consumableBody">
+            <!-- Filled dynamically -->
+          </tbody>
+        </table>
+        <div class="d-flex justify-content-center my-3" id="paginationContainer"></div>
+      </div>
 
       <!-- Add Item Modal -->
       <div class="modal fade" id="addItemModal" tabindex="-1" aria-labelledby="addItemModalLabel" aria-hidden="true">
-      <div class="modal-dialog modal-lg">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="addItemModalLabel">Add Item</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-          </div>
+        <div class="modal-dialog modal-lg">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="addItemModalLabel">Add Item</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
 
-          <div class="modal-body">
-            <form id="addItemForm">
-              <div class="mb-3">
-                <label for="newSpec" class="form-label">Specification</label>
-                <input type="text" class="form-control" id="newSpec" placeholder="Enter specification" />
-              </div>
+            <div class="modal-body">
+              <form id="addItemForm">
+                <div class="mb-3">
+                  <label for="newSpec" class="form-label">Specification</label>
+                  <input type="text" class="form-control" id="newSpec" placeholder="Enter specification" />
+                </div>
 
-              <div class="mb-3">
-                <label for="newQty" class="form-label">Quantity</label>
-                <input type="number" class="form-control" id="newQty" placeholder="Enter quantity" />
-              </div>
+                <div class="mb-3">
+                  <label for="newQty" class="form-label">Quantity</label>
+                  <input type="number" class="form-control" id="newQty" placeholder="Enter quantity" />
+                </div>
 
-              <div class="mb-3">
-                <label for="newUnit" class="form-label">Unit</label>
-                <input type="text" class="form-control" id="newUnit" placeholder="Enter unit" />
-              </div>
-            </form>
-          </div>
+                <div class="mb-3">
+                  <label for="newUnit" class="form-label">Unit of Measurement</label>
+                  <input type="text" class="form-control" id="newUnit" placeholder="Enter unit of measurement" />
+                </div>
 
-          <div class="modal-footer">
-            <button class="btn btn-primary" id="addItemBtn">Add</button>
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <div class="mb-3">
+                  <label for="newRemarks" class="form-label">Remarks</label>
+                  <textarea class="form-control" id="newRemarks" rows="3" placeholder="Enter remarks (optional)"></textarea>
+                </div>
+              </form>
+            </div>
+
+            <div class="modal-footer">
+              <button class="btn btn-primary" id="addItemBtn">Add</button>
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            </div>
           </div>
         </div>
       </div>
-    </div>
       <!-- Edit Modal -->
       <div class="modal fade" id="editModal" tabindex="-1" aria-hidden="true">
         <div class="modal-dialog">
@@ -107,15 +118,23 @@
       <!-- Action Modal -->
       <div class="modal fade" id="actionModal" tabindex="-1" aria-labelledby="actionModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
-          <div class="modal-content rounded-3">
-            <div class="modal-header">
-              <h5 class="modal-title" id="actionModalLabel">Choose Action</h5>
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          <div class="modal-content bg-dark text-light rounded-4 shadow">
+            <div class="modal-header border-bottom border-secondary">
+              <h5 class="modal-title d-flex align-items-center gap-2" id="actionModalLabel">
+                <i class="bi bi-tools"></i> Item Actions
+              </h5>
+              <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-            <div class="modal-body d-grid gap-2">
-              <button id="addStockBtn" class="btn btn-success">➕ Add Stock</button>
-              <button id="assignItemBtn" class="btn btn-warning">➖ Assign Item</button>
-              <button id="viewLedgerBtn" class="btn btn-info">📖 View Ledger</button>
+            <div class="modal-body d-grid gap-3 px-4 py-3">
+              <button id="addStockBtn" class="btn btn-success d-flex align-items-center justify-content-center gap-2">
+                <i class="bi bi-box-arrow-in-down"></i> Add Stock
+              </button>
+              <button id="assignItemBtn" class="btn btn-warning d-flex align-items-center justify-content-center gap-2">
+                <i class="bi bi-box-arrow-up"></i> Assign Item
+              </button>
+              <button id="viewLedgerBtn" class="btn btn-info d-flex align-items-center justify-content-center gap-2">
+                <i class="bi bi-journal-text"></i> View Ledger
+              </button>
             </div>
           </div>
         </div>
@@ -192,12 +211,6 @@
         </div>
       </div>
     </div>
-
-    <div id="loadingOverlay">
-      <div class="spinner-border text-primary" role="status" id="loadingSpinner">
-        <span class="visually-hidden">Loading...</span>
-      </div>
-    </div>
   </div>
   <!-- Firebase + Bootstrap -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -205,10 +218,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.28/jspdf.plugin.autotable.min.js"></script>
 
-  <script type="module">
-    import { renderSidebar } from './js/components/sidebar.js';
-    renderSidebar();
-  </script>
+
   <script type="module" src="js/consumable-data.js"></script>
   <script type="module" src="js/consumable-ui.js"></script>
 </body>
