--- a/public/ics.html
+++ b/public/ics.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ICS</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
   <link rel="stylesheet" href="css/dashboard.css" />
 </head>
@@ -14,10 +15,21 @@
 
     <!-- Page Content -->
     <div class="container-fluid p-4" id="page-content">
-      <h3 class="mb-4">Inventory Custody Slip / Property Acknowledgement Receipt</h3>
 
-      <div class="mb-3">
-        <input type="text" id="searchBar" class="form-control" placeholder="Search ICS..." />
+      <div class="d-flex align-items-center justify-content-between flex-wrap gap-2 mb-4">
+        <h5 class="mb-0 d-flex align-items-center">
+          <i class="bi bi-tools me-2"></i> Equipment
+        </h5>
+        
+        <div class="d-flex flex-grow-1 justify-content-end gap-2">
+          <div class="input-group" style="min-width: 350px; max-width: 500px; width: 100%;">
+            <span class="input-group-text">Search</span>
+            <input type="text" id="searchBar" class="form-control" placeholder="Enter item name..." />
+          </div>
+          <button id="addBtn" class="btn btn-primary">
+            <i class="bi bi-plus-circle me-1"></i> Add
+          </button>
+        </div>
       </div>
 
       <div class="table-responsive">
@@ -41,10 +53,6 @@
       <nav aria-label="ICS Table pagination">
         <ul class="pagination pagination-sm justify-content-center" id="paginationControls"></ul>
       </nav>
-
-      <div class="mt-4 d-flex justify-content-center">
-        <button class="btn btn-success btn-lg px-5" id="addBtn">Add ICS</button>
-      </div>
 
       <!-- Add ICS Modal -->
       <div class="modal fade" id="addICSModal" tabindex="-1" aria-labelledby="addICSModalLabel" aria-hidden="true">
@@ -232,19 +240,9 @@
         </div>
       </div>
     </div>
-
-    <div id="loadingOverlay">
-      <div class="spinner-border text-primary" role="status" id="loadingSpinner">
-        <span class="visually-hidden">Loading...</span>
-      </div>
-    </div>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script type="module">
-    import { renderSidebar } from './js/components/sidebar.js';
-    renderSidebar();
-  </script>
   <script type="module" src="js/ics-data.js"></script>
   <script type="module" src="js/ics-ui.js"></script>
   <script type="module" src="js/upload/upload.js"></script>
