--- a/public/ownership-summary.html
+++ b/public/ownership-summary.html
@@ -8,26 +8,28 @@
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
     rel="stylesheet"
   />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
+
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
   <link rel="stylesheet" href="css/dashboard.css" />
   <link rel="stylesheet" href="css/ownership-summary.css" />
+  <link rel="stylesheet" href="css/fix-spinner.css" />
 </head>
 <body>
   <div class="d-flex" id="wrapper">
     <div id="sidebarContainer"></div>
     <!-- Page Content -->
     <div class="container-fluid p-4" id="page-content">
-      <h3 class="mb-4">Inventory Summary</h3>
 
-      <!-- 🔍 Search bar -->
-      <div class="mb-3">
-        <input
-          type="text"
-          id="searchInput"
-          class="form-control"
-          placeholder="Search by name..."
-        />
-      </div>
+    <div class="d-flex justify-content-between align-items-center mb-4">
+      <h5 class="mb-0"><i class="bi bi-card-list me-2"></i>Inventory Summary</h5>
+      <input
+        type="text"
+        id="searchInput"
+        class="form-control w-50"
+        placeholder="Search by name..."
+      />
+    </div>
 
       <!-- 📋 Users Table -->
       <div class="table-responsive users-table-wrapper">
@@ -75,12 +77,6 @@
       </div>
 
     </div>
-
-    <div id="loadingOverlay">
-      <div class="spinner-border text-primary" role="status" id="loadingSpinner">
-        <span class="visually-hidden">Loading...</span>
-      </div>
-    </div>
   </div>
   <!-- Bootstrap JS Bundle (must come before your own JS) -->
   <script
@@ -88,11 +84,6 @@
   ></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.28/jspdf.plugin.autotable.min.js"></script>
-
-  <script type="module">
-    import { renderSidebar } from './js/components/sidebar.js';
-    renderSidebar();
-  </script>
   <script type="module" src="js/ownership-summary-data.js"></script>
   <script type="module" src="js/ownership-summary-ui.js"></script>
 </body>
