--- a/public/ownership-summary.html
+++ b/public/ownership-summary.html
@@ -83,6 +83,63 @@
         </div>
       </div>
 
+    <div class="modal fade" id="propertyModal" tabindex="-1" aria-labelledby="propertyModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-xl modal-dialog-scrollable">
+        <div class="modal-content shadow-lg rounded-3">
+          
+          <div class="modal-header flex-wrap gap-3 justify-content-between align-items-center border-bottom-0 px-4 pt-4 pb-2">
+            <div>
+              <h5 class="modal-title fw-semibold text-primary" id="propertyModalLabel">
+                Property Accountability of <span id="fullName" class="text-dark"></span>
+              </h5>
+            </div>
+            <div class="d-flex flex-column align-items-end">
+              <button id="generatePdfBtn" class="btn btn-outline-danger btn-sm mb-2">
+                <i class="bi bi-file-earmark-pdf me-1"></i> Generate PDF
+              </button>
+              <strong>Total Amount: <span id="totalAmount" class="text-dark"></span></strong>
+            </div>
+          </div>
+
+          <div class="modal-body px-4 pt-2 pb-0">
+            <div style="overflow-x: auto; transform: rotateX(180deg);">
+              <div style="transform: rotateX(180deg); min-width: 1000px;">
+                <table class="table table-bordered table-sm align-middle text-center mb-0">
+                  <thead class="table-light text-nowrap">
+                    <tr>
+                      <th rowspan="2">Qty</th>
+                      <th rowspan="2">UoM</th>
+                      <th rowspan="2">Description</th>
+                      <th rowspan="2">SN</th>
+                      <th colspan="2">Amount</th>
+                      <th rowspan="2">ICS No</th>
+                      <th rowspan="2">Date Issued</th>
+                      <th rowspan="2">Remarks</th>
+                      <th rowspan="2">PDF</th>
+                    </tr>
+                    <tr>
+                      <th>Unit Cost</th>
+                      <th>Total Cost</th>
+                    </tr>
+                  </thead>
+                  <tbody id="icsTableBody">
+                    <!-- ICS data rows go here dynamically -->
+                  </tbody>
+                </table>
+              </div>
+            </div>
+          </div>
+
+          <div class="modal-footer justify-content-center border-top-0 pb-4">
+            <button type="button" class="btn btn-secondary px-4" data-bs-dismiss="modal">
+              <i class="bi bi-x-circle me-1"></i> Close
+            </button>
+          </div>
+
+        </div>
+      </div>
+    </div>
+
     </div>
   </div>
   <!-- Bootstrap JS Bundle (must come before your own JS) -->
